--- a/src/main/resources/home.fxml
+++ b/src/main/resources/home.fxml
@@ -3,23 +3,33 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <VBox alignment="CENTER" prefHeight="443.0" prefWidth="620.0" spacing="20" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
 
-    <ImageView fitHeight="189.0" fitWidth="223.0" pickOnBounds="true" preserveRatio="true">
-      <image>
-         <Image url="@imagens/logo.png" />
-      </image>
-    </ImageView>
+    <AnchorPane VBox.vgrow="ALWAYS">
+        <children>
+            <ImageView fx:id="imgFundo" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <image>
+                    <Image url="@imagens/1-ekwce98m.jpg" />
+                </image>
+            </ImageView>
 
-    <Label text="Bem-vindo ao Sistema de Reservas">
-        <font> <Font size="24.0" /> </font>
-    </Label>
+            <ImageView fitHeight="240.0" fitWidth="263.0" layoutX="291.0" layoutY="107.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="291.0" AnchorPane.topAnchor="107.0">
+                <image>
+                    <Image url="@imagens/logo.png" />
+                </image>
+            </ImageView>
 
-    <Label text="Desenvolvido por: Nayan e Alan" textFill="#666666">
-        <font> <Font name="System Bold" size="16.0" /> </font>
-    </Label>
+            <Label layoutX="275.0" layoutY="426.0" prefHeight="33.0" prefWidth="272.0" style="-fx-background-color: #a1a1a1; -fx-background-radius: 5;" text=" Sistema desenvolvido por: Nayan e Alan" textFill="WHITE" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="247.0">
+                <font>
+                    <Font size="15.0" />
+                </font>
+            </Label>
+
+        </children>
+    </AnchorPane>
 
 </VBox>
