--- a/src/main/resources/menu.fxml
+++ b/src/main/resources/menu.fxml
@@ -13,12 +13,12 @@
 <BorderPane fx:id="painelPrincipal" prefHeight="350.0" prefWidth="729.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.nayan.reserva_salao.view.MenuViewController">
 
     <left>
-        <VBox prefHeight="534.0" prefWidth="94.0" spacing="10" style="-fx-background-color: #2c3e50;">
+        <VBox prefHeight="567.0" prefWidth="188.0" spacing="10" style="-fx-background-color: #2c3e50;">
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <Label text="RESERVAS" textFill="WHITE">
+            <Label prefHeight="27.0" prefWidth="146.0" text="RESERVA SALÃO" textFill="WHITE">
                 <font><Font name="System Bold" size="18.0" /></font>
             </Label>
 
@@ -26,11 +26,6 @@
 
             <Button maxWidth="Infinity" onAction="#onAbrirHome" text="Início" />
             <Button maxWidth="Infinity" onAction="#onAbrirReservas" text="Gerenciar Reservas" />
-         <ImageView fitHeight="125.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-               <Image url="@imagens/logo.png" />
-            </image>
-         </ImageView>
         </VBox>
     </left>
 
