--- a/src/main/resources/reserva.fxml
+++ b/src/main/resources/reserva.fxml
@@ -1,70 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="700.0" spacing="15" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.nayan.reserva_salao.view.ReservaViewController">
+<VBox spacing="10" alignment="TOP_CENTER"
+      xmlns="http://javafx.com/javafx"
+      xmlns:fx="http://javafx.com/fxml"
+      fx:controller="br.com.nayan.reserva_salao.view.ReservaViewController">
 
-    <padding>
-        <Insets bottom="20" left="20" right="20" top="20" />
-    </padding>
+    <padding> <Insets top="20" right="20" bottom="20" left="20"/> </padding>
 
-    <Label text="Crie sua reserva" textFill="#333333">
-        <font> <Font name="System Bold" size="20.0" /> </font>
+    <Label text="Gerenciamento de Reservas">
+        <font><Font name="System Bold" size="20.0"/></font>
     </Label>
 
-    <GridPane alignment="CENTER" hgap="10" vgap="10">
-        <Label text="Nome Condomínio:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-        <TextField fx:id="txtNomeCondominio" promptText="Ex: Residencial A" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+    <TitledPane text="Filtros de Pesquisa" expanded="true">
+        <HBox spacing="10" alignment="CENTER_LEFT">
+            <TextField fx:id="filtroCondominio" promptText="Filtrar por Condomínio"/>
+            <TextField fx:id="filtroSalao" promptText="Filtrar por Salão"/>
+            <DatePicker fx:id="filtroData" promptText="Filtrar por Data"/>
+            <Button text="Limpar" onAction="#limparFiltros"/>
+        </HBox>
+    </TitledPane>
 
-        <Label text="Nome Salão:" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-        <TextField fx:id="txtNomeSalao" promptText="Ex: Salão de Festas" GridPane.columnIndex="3" GridPane.rowIndex="0" />
+    <Separator/>
 
-        <Label text="Número Casa:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <TextField fx:id="txtNumeroCasa" promptText="Ex: 10" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+    <GridPane hgap="10" vgap="10" alignment="CENTER">
+        <Label text="Condomínio:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+        <TextField fx:id="txtNomeCondominio" promptText="Nome exato" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
 
-        <Label text="Data:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-        <DatePicker fx:id="dpDataReserva" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-      <columnConstraints>
-         <ColumnConstraints />
-         <ColumnConstraints />
-         <ColumnConstraints />
-         <ColumnConstraints />
-      </columnConstraints>
-      <rowConstraints>
-         <RowConstraints />
-         <RowConstraints />
-      </rowConstraints>
+        <Label text="Salão:" GridPane.rowIndex="0" GridPane.columnIndex="2"/>
+        <TextField fx:id="txtNomeSalao" promptText="Nome exato" GridPane.rowIndex="0" GridPane.columnIndex="3"/>
+
+        <Label text="Casa (Nº):" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+        <TextField fx:id="txtNumeroCasa" promptText="101" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+
+        <Label text="Data:" GridPane.rowIndex="1" GridPane.columnIndex="2"/>
+        <DatePicker fx:id="dpDataReserva" GridPane.rowIndex="1" GridPane.columnIndex="3"/>
     </GridPane>
 
-    <Button onAction="#onNovaReserva" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-weight: bold;" text="Salvar Reserva" />
+    <HBox spacing="10" alignment="CENTER">
+        <Button text="salvar / atualizar" onAction="#onSalvar" style="-fx-background-color: #27ae60; -fx-text-fill: white;"/>
+        <Button text="limpar campos" onAction="#limparCampos"/>
+    </HBox>
 
-    <Separator />
+    <Separator/>
 
     <TableView fx:id="tabelaReservas" VBox.vgrow="ALWAYS">
         <columns>
-            <TableColumn fx:id="colId" prefWidth="50" text="ID" />
-            <TableColumn fx:id="colCondominio" prefWidth="150" text="Condomínio" />
-            <TableColumn fx:id="colSalao" prefWidth="150" text="Salão" />
-            <TableColumn fx:id="colCasa" prefWidth="80" text="Casa" />
-            <TableColumn fx:id="colData" prefWidth="100" text="Data" />
+            <TableColumn fx:id="colId" text="ID" prefWidth="50"/>
+            <TableColumn fx:id="colCondominio" text="Condomínio" prefWidth="150"/>
+            <TableColumn fx:id="colSalao" text="Salão" prefWidth="150"/>
+            <TableColumn fx:id="colCasa" text="Casa" prefWidth="80"/>
+            <TableColumn fx:id="colData" text="Data" prefWidth="100"/>
         </columns>
-        <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-        </columnResizePolicy>
+        <columnResizePolicy> <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/> </columnResizePolicy>
     </TableView>
 
-    <Button onAction="#onExcluirReserva" style="-fx-background-color: #F44336; -fx-text-fill: white;" text="Excluir Selecionado" />
+    <HBox spacing="10" alignment="CENTER_RIGHT">
+        <Button text="editar Selecionado" onAction="#onEditar" style="-fx-background-color: #f39c12; -fx-text-fill: white;"/>
+        <Button text="excluir Selecionado" onAction="#onExcluir" style="-fx-background-color: #c0392b; -fx-text-fill: white;"/>
+    </HBox>
 
 </VBox>
